kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextgen
  namespace: nextgen
spec:
  selector:
    app: nextgen
  ports:
    - name: nextgen
      protocol: TCP
      port: 80
      targetPort: 80
